xml-binding/3.0/_index.md
---
title: "Jakarta XML Binding 3.0"
date: 2020-10-15
summary: "Release for Jakarta EE 9"
---
The Jakarta XML Binding provides an API and tools that automate the mapping
between XML documents and Java objects.

* [Jakarta XML Binding 3.0 Release Record](https://projects.eclipse.org/projects/ee4j.jaxb/releases/3.0)
  * [Jakarta EE Platform 9 Release Plan](https://eclipse-ee4j.github.io/jakartaee-platform/jakartaee9/JakartaEE9ReleasePlan)
* [Jakarta XML Binding 3.0 Specification Document](./jakarta-xml-binding-spec-3.0.pdf) (PDF)
* [Jakarta XML Binding 3.0 Specification Document](./jakarta-xml-binding-spec-3.0.html) (HTML)
* [Jakarta XML Binding 3.0 Javadoc](./apidocs)
* [Jakarta XML Binding 3.0 XML Schema](https://jakarta.ee/xml/ns/jaxb/bindingschema_3_0.xsd)
* [Jakarta XML Binding 3.0 TCK](https://download.eclipse.org/jakartaee/xml-binding/3.0/jakarta-xml-binding-tck-3.0.0.zip)  ([sig](https://download.eclipse.org/jakartaee/xml-binding/3.0/jakarta-xml-binding-tck-3.0.0.zip.sig),  [sha](https://download.eclipse.org/jakartaee/xml-binding/3.0/jakarta-xml-binding-tck-3.0.0.zip.sha256),  [pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
   * Adds JDK 11 Support [Jakarta XML Binding 3.0.1 TCK](https://download.eclipse.org/jakartaee/xml-binding/3.0/jakarta-xml-binding-tck-3.0.1.zip)  ([sig](https://download.eclipse.org/jakartaee/xml-binding/3.0/jakarta-xml-binding-tck-3.0.1.zip.sig),  [sha](https://download.eclipse.org/jakartaee/xml-binding/3.0/jakarta-xml-binding-tck-3.0.1.zip.sha256),  [pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
   * Adds JDK 12, 17 Support [Jakarta XML Binding 3.0.2 TCK](https://download.eclipse.org/jakartaee/xml-binding/3.0/jakarta-xml-binding-tck-3.0.2.zip)  ([sig](https://download.eclipse.org/jakartaee/xml-binding/3.0/jakarta-xml-binding-tck-3.0.2.zip.sig),  [sha](https://download.eclipse.org/jakartaee/xml-binding/3.0/jakarta-xml-binding-tck-3.0.2.zip.sha256),  [pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
* Maven coordinates
  * [jakarta.xml.bind:jakarta.xml.bind-api:jar:3.0.1](https://search.maven.org/artifact/jakarta.xml.bind/jakarta.xml.bind-api/3.0.1/jar)
* [Change Log](./changelog)


# Compatible Implementations

* [Jakarta XML Binding 3.0.0](https://eclipse-ee4j.github.io/jaxb-ri/)

# Ballots

## Plan Review

[//]: # (For Jakarta EE 9, the Platform Plan Review covered 95% of the Specification Projects.  For those Projects, just use the following statement in this Plan Review section:)

This Specification Project's Plan Review was covered by the [Jakarta EE 9 Plan Review](https://jakarta.ee/specifications/platform/9/).  
Please reference that ballot for the official results.

[//]: # (If your Project was required to do a standalone Plan Review...  You'll need to perform an official Plan Review ballot and record the results here.)

## Release Review

The Specification Committee Ballot concluded successfully on 2020-10-26 with the following results.

| Representative                                 | Representative for: | Vote |
|------------------------------------------------|---------------------|------|
|Kenji Kazumura                                  | Fujitsu | +1
|Dan Bandera, Kevin Sutter                       | IBM | +1
|Ed Bratt, Dmitry Kornilov                       | Oracle | +1
|Andrew Pielage, Matt Gill                       | Payara | +1
|Scott Stark, Mark Little                        | Red Hat | +1
|David Blevins, Jean-Louis Monteiro.             | Tomitribe | +1
|Ivar Grimstad                                   | EE4J PMC | +1
|Marcelo Ancelmo, Martijn Verburg                | Participant Members | no vote
|Werner Keil                                     | Committer Members | no vote
|Scott (Congquan) Wang                           | Enterprise Members | +1
|                                                | Total               |  8    |

The ballot was run in the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg01054.html)
